# datashield-vault

./: .gitignore  MONITORING.md  README.md  run.sh  vault.sh
app/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
app/src/vault/: __init__.py  config.py  main.py
app/src/vault/api/: __init__.py  app.py  auth.py  routes.py  schemas.py
app/src/vault/db/: models.py  repository.py  session.py
app/src/vault/minio_client/: __init__.py  circuit_breaker.py  client.py
app/src/vault/monitoring/: __init__.py  background.py  health.py  metrics.py  router.py
app/src/vault/sync/: __init__.py  state.py
app/src/vault/watcher/: __init__.py  handler.py  watcher.py
